# cblind

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: bleeding-edge.yaml  cd.yml  ci.yml
cblind/: cblind.py
constraints/: minimal_dependencies.txt
imgs/: colormaps.py  huescale.py
src/cblind/: __init__.py  cblind.py
tests/: test_cblind.py
