[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cblind"
version = "2.3.1"
description = "Color schemes for Python plots, from Paul Tol (2012)"
authors = [
    { name = "G. Wafflard-Fernandez" },
]
classifiers = [
    "Framework :: Matplotlib",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5.0",
    "cycler>=0.10",
    "numpy>=1.21.2",
]
license = { file = "LICENSE" }

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/volodia99/cblind"

[dependency-groups]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error",
]

[tool.ruff.lint]
exclude = [
    "*__init__.py",
    "from_simulation.py", # deprecated module
]
ignore = [
    "E501",
    "PTH123", # `open()` should be replaced by `Path.open()`
]
select = [
    "E",
    "F",
    "W",
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "B",   # flake8-bugbear
    "YTT", # flake8-2020
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["nonos"]
